force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__CallConnectDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__CallConnectDateTime__c</fullName>
    <label>Call Connect DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CallConnectDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>