force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__CallQueuedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__CallQueuedDateTime__c</fullName>
    <label>Call Queued DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CallQueuedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>