force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__DisconnectReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__DisconnectReason__c</fullName>
    <label>Disconnect Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DisconnectReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>