force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__IsRecorded__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recorded</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRecorded</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>