force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__NumberOfHoldsQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__NumberOfHoldsQuantity__c</fullName>
    <label>Number Of Holds</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NumberOfHoldsQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>