force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__QueueName__c.field-meta.xml
<CustomField>
    <fullName>ssot__QueueName__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QueueName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>