force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__rel_1724992760432_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724992760432_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoiceCall_RelatedToId_map_AccountCon_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>VoiceCall_RelatedToId_map_AccountCon_rel</relationshipLabel>
    <relationshipName>rel_1724992760432_end</relationshipName>
    <type>Lookup</type>
</CustomField>