force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__rel_1724992834442_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724992834442_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoiceCall_RelatedToId_map_Opportunit_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>VoiceCall_RelatedToId_map_Opportunit_rel</relationshipLabel>
    <relationshipName>rel_1724992834442_end</relationshipName>
    <type>Lookup</type>
</CustomField>