force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__VoiceCall_RelatedToId_map_Case_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoiceCall_RelatedToId_map_Case_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoiceCall_RelatedToId_map_Case_Id_N_1</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>VoiceCall_RelatedToId_map_Case_Id_N_1</relationshipLabel>
    <relationshipName>VoiceCall_RelatedToId_map_Case_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>