force-app/main/default/objects/ssot__VoiceCall__dlm/fields/ssot__VoiceCallVendorType__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoiceCallVendorType__c</fullName>
    <label>Voice Call Vendor Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoiceCallVendorType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>